@@ -3,21 +3,33 @@ package ru.otus.hw.hw11.mappers;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import ru.otus.hw.hw11.dto.BookDto;
+import ru.otus.hw.hw11.dto.GenreDto;
 import ru.otus.hw.hw11.models.Book;
 
-import java.util.stream.Collectors;
+import java.util.List;
 
-@RequiredArgsConstructor
 @Component
+@RequiredArgsConstructor
 public class BookMapper {
     private final AuthorMapper authorMapper;
 
     private final GenreMapper genreMapper;
 
     public BookDto bookToDto(Book book) {
-        return new BookDto(book.getId(), book.getTitle(),
-                authorMapper.authorToDto(book.getAuthor()),
-                book.getGenres().stream().map(genreMapper::genreToDto).collect(Collectors.toList())
+        List<GenreDto> genres = book.getGenres() == null
+                ? List.of()
+                : book.getGenres()
+                .stream()
+                .map(genreMapper::genreToDto)
+                .toList();
+
+        return new BookDto(
+                book.getId(),
+                book.getTitle(),
+                book.getAuthor() == null
+                        ? null
+                        : authorMapper.authorToDto(book.getAuthor()),
+                genres
         );
     }
 }
